completed admin dashboard with belal

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGO_URI=mongodb+srv://SayedSafwat:SayedSafwat99@cluster78.3whks5i.mongodb.net/?retryWrites=true&w=majority&appName=Cluster78
-
+JWT_SECRET=unibite-secret-key-2024-xyz123
