--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "socket.io": "^4.8.1"
   }
 }
