--- a/vercel.json
+++ b/vercel.json
@@ -11,30 +11,12 @@
             "src": "/public/(.*)",
             "dest": "/Public/$1"
         },
-        
-        {
-            "src": "/Styles/(.*)",
-            "dest": "/Public/Styles/$1"
-        },
-        {
-            "src": "/JavaScript/(.*)",
-            "dest": "/Public/JavaScript/$1"
-        },
-        {
-            "src": "/Images/(.*)",
-            "dest": "/Public/Images/$1"
-        },
-        {
-            "src": "/Audio/(.*)",
-            "dest": "/Public/Audio/$1"
-        },
-        {
-            "src": "/api/(.*)",
-            "dest": "server.js"
-        },
         {
             "src": "/(.*)",
             "dest": "server.js"
         }
     ]
+    "env": {
+    "NODE_ENV": "production"
+  }
 } 
