--- a/vercel.json
+++ b/vercel.json
@@ -1,38 +1,40 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/public/(.*)",
-      "dest": "/Public/$1"
-    },
-    {
-      "src": "/JavaScript/(.*)",
-      "dest": "/Public/JavaScript/$1"
-    },
-    {
-      "src": "/Styles/(.*)",
-      "dest": "/Public/Styles/$1"
-    },
-    {
-      "src": "/Images/(.*)",
-      "dest": "/Public/Images/$1"
-    },
-    {
-      "src": "/Audio/(.*)",
-      "dest": "/Public/Audio/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/server.js"
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
-
+"version": 2,
+"builds": [
+{
+"src": "server.js",
+"use": "@vercel/node"
+}
+],
+"routes": [
+        {
+            "src": "/public/(.*)",
+            "dest": "/Public/$1"
+        },
+        
+{
+"src": "/Styles/(.*)",
+"dest": "/Public/Styles/$1"
+},
+{
+"src": "/JavaScript/(.*)",
+"dest": "/Public/JavaScript/$1"
+},
+{
+"src": "/Images/(.*)",
+"dest": "/Public/Images/$1"
+},
+{
+"src": "/Audio/(.*)",
+"dest": "/Public/Audio/$1"
+},
+{
+"src": "/api/(.*)",
+"dest": "server.js"
+},
+{
+"src": "/(.*)",
+"dest": "server.js"
+}
+]
+} 
