--- a/vercel.json
+++ b/vercel.json
@@ -1,40 +1,35 @@
 {
-"version": 2,
-"builds": [
-{
-"src": "server.js",
-"use": "@vercel/node"
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/Styles/(.*)",
+      "dest": "/public/Styles/$1"
+    },
+    {
+      "src": "/JavaScript/(.*)",
+      "dest": "/public/JavaScript/$1"
+    },
+    {
+      "src": "/Images/(.*)",
+      "dest": "/public/Images/$1"
+    },
+    {
+      "src": "/Audio/(.*)",
+      "dest": "/public/Audio/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
+    }
+  ]
 }
-],
-"routes": [
-        {
-            "src": "/public/(.*)",
-            "dest": "/Public/$1"
-        },
-        
-{
-"src": "/Styles/(.*)",
-"dest": "/Public/Styles/$1"
-},
-{
-"src": "/JavaScript/(.*)",
-"dest": "/Public/JavaScript/$1"
-},
-{
-"src": "/Images/(.*)",
-"dest": "/Public/Images/$1"
-},
-{
-"src": "/Audio/(.*)",
-"dest": "/Public/Audio/$1"
-},
-{
-"src": "/api/(.*)",
-"dest": "server.js"
-},
-{
-"src": "/(.*)",
-"dest": "server.js"
-}
-]
-} 
