--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     }
   ],
   "routes": [
+     {
+      "src": "/styles/(.*)",
+      "dest": "/Public/Styles/$1"
+    },
     {
       "src": "/Styles/(.*)",
       "dest": "/Public/Styles/$1"
