--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
+    "node-forge": "^1.3.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "sharp": "^0.34.2",
